# Collaborative-Workspace

backend/: .env  .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e173abd1842_create_user_table.py  2fab7474ff0c_updated_tables.py  482ee73acac6_adding_workspace_and_membership.py  4fd1aa13e615_create_user_table.py  550e0cc10f78_added_role_model.py  69fb74872444_added_role_model.py  6e65706520c3_initial_document_table.py  6f764f01dc8d_initial_document_table.py  784c3418a7ae_added_role_model.py  94fa4ffcc819_initial_users_table.py  ae250d287b2c_initial_users_table.py  b1eca72986ef_init.py  bd16d4f58982_adding_workspace_and_membership.py  c347deb87098_initial_document_table.py  ce622be672f4_added_refresh_and_reset_tokens.py  d9e6994e8974_add_share_links_table.py  f33a7452cbc0_create_documents_table.py  (+2 more)
backend/app/: config.py  database.py  main.py
backend/crud/: document_crud.py  membership_crud.py  role_crud.py  user_crud.py  workspace_crud.py
backend/db/: base.py  database.py
backend/models/: document.py  membership.py  role.py  user.py  workspace.py
backend/routers/: auth_router.py  document_router.py  membership_router.py  role_router.py  workspace_router.py
backend/schemas/: document_schema.py  membership_schema.py  role_schema.py  user_schema.py  workspace_schema.py
backend/tests/: conftest.py  test_document_crud.py  test_membership_crud.py  test_role_crud.py  test_role_seeder.py  test_user_crud.py  test_workspace_crud.py
backend/utils/: auth.py  email.py  permissions.py  seeder.py  token.py
(+48 files in other folders)
